# Kimera-Semantics

./: .gitignore  LICENSE.BSD  README.md
.github/ISSUE_TEMPLATE/: error-report.md
docs/: ros_installation.md
install/: kimera_semantics_https.rosinstall  kimera_semantics_ssh.rosinstall
kimera/: CMakeLists.txt  package.xml
kimera/install/: kimera_semantics_https.rosinstall  kimera_semantics_ssh.rosinstall
kimera_semantics/: CMakeLists.txt  package.xml
kimera_semantics/include/kimera_semantics/: color.h  common.h  csv_iterator.h  semantic_integrator_base.h  semantic_mesh_integrator.h  semantic_tsdf_integrator.h  semantic_tsdf_integrator_factory.h  semantic_tsdf_integrator_fast.h  semantic_tsdf_integrator_merged.h  semantic_voxel.h
kimera_semantics/include/kimera_semantics/simulation/: semantic_simulation_world.h
kimera_semantics/src/: color.cpp  csv_iterator.cpp  semantic_integrator_base.cpp  semantic_mesh_integrator.cpp  semantic_tsdf_integrator.cpp  semantic_tsdf_integrator_base.cpp  semantic_tsdf_integrator_factory.cpp  semantic_tsdf_integrator_fast.cpp  semantic_tsdf_integrator_merged.cpp
kimera_semantics/src/simulation/: semantic_simulation_world.cpp
kimera_semantics_ros/: CMakeLists.txt  package.xml
kimera_semantics_ros/cfg/: ade150_expanded_config.csv  apartment_static_tfs_ros.csv  goseek_scene1_segmentation_mapping.csv  join_color_and_id.ipynb  mask_rcnn_mapping.csv  maskrcnn_mapping.csv  neighborhood_static_tfs_ros.csv  office_static_tfs_ros.csv  rss_segmentation_mapping.csv  simulation.csv  sofas_segmentation_mapping.csv  subway_static_tfs_ros.csv  tesse_multiscene_archviz1_segmentation_mapping.csv  tesse_multiscene_archviz1_segmentation_mapping.md  tesse_multiscene_archviz1_static_tfs.csv  tesse_multiscene_neighborhood1_segmentation_mapping.csv  tesse_multiscene_neighborhood1_segmentation_mapping.md  tesse_multiscene_neighborhood1_static_tfs.csv  tesse_multiscene_office1_segmentation_mapping.csv  tesse_multiscene_office2_segmentation_mapping.csv  tesse_multiscene_office2_static_tfs.csv  tesse_multiscene_underground1_segmentation_mapping.csv  tesse_multiscene_underground1_segmentation_mapping.md  tesse_multiscene_underground1_static_tfs.csv
kimera_semantics_ros/config/: jackal.yaml  kimera.yaml
kimera_semantics_ros/include/kimera_semantics_ros/: depth_map_to_pointcloud.h  ros_params.h  rosbag_data_provider.h  semantic_simulation_server.h  semantic_tsdf_server.h
kimera_semantics_ros/launch/: disparity_to_depth.launch  kimera_metric_euroc.launch  kimera_metric_realsense.launch  kimera_semantics.launch  kimera_semantics_euroc.launch  kimera_semantics_eval.launch  kimera_semantics_jackal.launch  kimera_semantics_realsense.launch  kimera_semantics_rosbag.launch  kimera_semantics_sidpac.launch  kimera_semantics_uHumans2.launch  kimera_semantics_warty.launch  stereo_depth.launch  tesse.launch
kimera_semantics_ros/rosbags/: .gitignore
kimera_semantics_ros/rviz/: kimera_realsense_metric.rviz  kimera_semantics_euroc.rviz  kimera_semantics_gt.rviz  kimera_semantics_sim.rviz  kimera_semantics_uHumans2.rviz
kimera_semantics_ros/scripts/: kimera_semantics_eval.bash
kimera_semantics_ros/src/: kimera_semantics_node.cpp  kimera_semantics_rosbag.cpp  ros_params.cpp  rosbag_data_provider.cpp  semantic_simulation_eval.cpp  semantic_simulation_server.cpp  semantic_tsdf_server.cpp
rviz/: kimera_semantics_gt.rviz
