<package>
  <name>kimera</name>
  <version>1.0.0</version>
  <description>Kimera Metapackage</description>

  <author email="arosinol@mit.edu">Antoni Rosinol</author>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kimera_semantics_ros</run_depend>
  <run_depend>kimera_semantics</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
