<?xml version="1.0"?>
<package format="2">
  <name>kimera_semantics</name>
  <version>1.0.0</version>
  <description>Kimera Semantics</description>

  <author email="arosinol@mit.edu">Antoni Rosinol</author>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr</depend>

  <depend>voxblox</depend>
</package>
