<?xml version="1.0"?>
<package format="2">
  <name>kimera_semantics_ros</name>
  <version>1.0.0</version>
  <description>Kimera Semantics</description>

  <author email="arosinol@mit.edu">Antoni Rosinol</author>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>depth_image_proc</depend>
  <depend>image_geometry</depend>

  <depend>kimera_semantics</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_rviz_plugin</depend>

  <exec_depend>disparity_image_proc</exec_depend>
</package>
